@@ -59,6 +59,7 @@ void register_all_ob_types() {
     init_type_converter();
     init_type_creator();
     init_type_deep_swamp();
+    init_type_detector();
     init_type_director();
     init_type_exit();
     init_type_food();
