@@ -13,6 +13,15 @@ changes' is much more useful than 'misc edits' or 'code cleanup'.
 small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
+Extract detector handling to its own type file.
+ include/sproto.h typesproto.h
+ server/ob_types.c time.c
+ types/Makefile.am
+ types/legacy/process.c
+New file:
+ types/detector/detector.c
+Nicolas Weeger 2008-04-11
+
 Extract mood floor handling to its own type file.
  common/button.c
  include/sproto.h typesproto.h
